// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BodyField should match the previous snapshot when !useFormData 1`] = `
<div
  className="hNpSwj"
>
  <button
    className="btn btn-link"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <h4>
      Request body
      <div
        className="jsiZnw clearfix"
      >
        <i
          className="fa fa-angle-right"
          role="presentation"
        />
      </div>
    </h4>
  </button>
  <div
    aria-expanded={null}
    className="collapse row"
  >
    <div
      className="col-xs-12"
    >
      <div
        className="form-group"
      >
        <label
          className="col-xs-2 control-label"
          htmlFor="bodyType"
        >
          Type
        </label>
        <div
          className="col-xs-8"
        >
          <select
            className="form-control"
            id="bodyType"
            name="bodyType"
            onBlur={[Function]}
            onChange={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            onFocus={[Function]}
            placeholder="Body type"
            type={undefined}
            value=""
          >
            <option
              value="custom"
            >
              Custom
            </option>
            <option
              value="json"
            >
              JSON
            </option>
            <option
              value="multipart"
            >
              Multipart form data
            </option>
            <option
              value="urlencoded"
            >
              URLencoded form data
            </option>
          </select>
        </div>
      </div>
      <div
        className="col-xs-12"
      >
        <div
          className="form-group"
        >
          <textarea
            className="form-control"
            id="requestBody"
            name="data"
            onBlur={[Function]}
            onChange={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            onFocus={[Function]}
            rows={10}
            type={undefined}
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`BodyField should match the previous snapshot when bodyType is json 1`] = `
<div
  className="hNpSwj"
>
  <button
    className="btn btn-link"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <h4>
      Request body
      <div
        className="jsiZnw clearfix"
      >
        <i
          className="fa fa-angle-right"
          role="presentation"
        />
      </div>
    </h4>
  </button>
  <div
    aria-expanded={null}
    className="collapse row"
  >
    <div
      className="col-xs-12"
    >
      <div
        className="form-group"
      >
        <label
          className="col-xs-2 control-label"
          htmlFor="bodyType"
        >
          Type
        </label>
        <div
          className="col-xs-8"
        >
          <select
            className="form-control"
            id="bodyType"
            name="bodyType"
            onBlur={[Function]}
            onChange={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            onFocus={[Function]}
            placeholder="Body type"
            type={undefined}
            value=""
          >
            <option
              value="custom"
            >
              Custom
            </option>
            <option
              value="json"
            >
              JSON
            </option>
            <option
              value="multipart"
            >
              Multipart form data
            </option>
            <option
              value="urlencoded"
            >
              URLencoded form data
            </option>
          </select>
        </div>
      </div>
      <div
        className="eWjddY"
      >
        <div
          className="row"
        >
          <div
            className="col-xs-12"
          >
            <button
              className="hvMBRh btn btn-link"
              disabled={false}
              id="addParameter"
              onClick={[Function]}
              type="button"
            >
              <div
                className="jsiZnw clearfix"
              >
                <i
                  className="fa fa-plus"
                  role="presentation"
                />
              </div>
              Add parameter
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`BodyField should match the previous snapshot when bodyType is multipart 1`] = `
<div
  className="hNpSwj"
>
  <button
    className="btn btn-link"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <h4>
      Request body
      <div
        className="jsiZnw clearfix"
      >
        <i
          className="fa fa-angle-right"
          role="presentation"
        />
      </div>
    </h4>
  </button>
  <div
    aria-expanded={null}
    className="collapse row"
  >
    <div
      className="col-xs-12"
    >
      <div
        className="form-group"
      >
        <label
          className="col-xs-2 control-label"
          htmlFor="bodyType"
        >
          Type
        </label>
        <div
          className="col-xs-8"
        >
          <select
            className="form-control"
            id="bodyType"
            name="bodyType"
            onBlur={[Function]}
            onChange={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            onFocus={[Function]}
            placeholder="Body type"
            type={undefined}
            value=""
          >
            <option
              value="custom"
            >
              Custom
            </option>
            <option
              value="json"
            >
              JSON
            </option>
            <option
              value="multipart"
            >
              Multipart form data
            </option>
            <option
              value="urlencoded"
            >
              URLencoded form data
            </option>
          </select>
        </div>
      </div>
      <div
        className="eWjddY"
      >
        <div
          className="row"
        >
          <div
            className="col-xs-12"
          >
            <button
              className="hvMBRh btn btn-link"
              disabled={false}
              id="addParameter"
              onClick={[Function]}
              type="button"
            >
              <div
                className="jsiZnw clearfix"
              >
                <i
                  className="fa fa-plus"
                  role="presentation"
                />
              </div>
              Add parameter
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`BodyField should match the previous snapshot when bodyType is urlencoded 1`] = `
<div
  className="hNpSwj"
>
  <button
    className="btn btn-link"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <h4>
      Request body
      <div
        className="jsiZnw clearfix"
      >
        <i
          className="fa fa-angle-right"
          role="presentation"
        />
      </div>
    </h4>
  </button>
  <div
    aria-expanded={null}
    className="collapse row"
  >
    <div
      className="col-xs-12"
    >
      <div
        className="form-group"
      >
        <label
          className="col-xs-2 control-label"
          htmlFor="bodyType"
        >
          Type
        </label>
        <div
          className="col-xs-8"
        >
          <select
            className="form-control"
            id="bodyType"
            name="bodyType"
            onBlur={[Function]}
            onChange={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            onFocus={[Function]}
            placeholder="Body type"
            type={undefined}
            value=""
          >
            <option
              value="custom"
            >
              Custom
            </option>
            <option
              value="json"
            >
              JSON
            </option>
            <option
              value="multipart"
            >
              Multipart form data
            </option>
            <option
              value="urlencoded"
            >
              URLencoded form data
            </option>
          </select>
        </div>
      </div>
      <div
        className="eWjddY"
      >
        <div
          className="row"
        >
          <div
            className="col-xs-12"
          >
            <button
              className="hvMBRh btn btn-link"
              disabled={false}
              id="addParameter"
              onClick={[Function]}
              type="button"
            >
              <div
                className="jsiZnw clearfix"
              >
                <i
                  className="fa fa-plus"
                  role="presentation"
                />
              </div>
              Add parameter
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
